--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -7,6 +7,11 @@
   z-index: 9999;
 }
 
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .headerMain {
   width: 100%;
   position: fixed;
@@ -46,12 +51,12 @@
   gap: 10px;
 }
 
-.menuWrapper > li {
+.menuWrapper li {
   font-size: 0.9rem;
   opacity: 0.5;
 }
 
-.menuWrapper > li:hover {
+.menuWrapper li:hover {
   cursor: pointer;
   opacity: 1;
 }
