--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -117,7 +117,8 @@
 @media screen and (max-width: 800px) {
   .contents {
     flex-direction: column;
-    padding-top: 150px;
+    padding-top: 100px;
+    padding-bottom: 150px;
   }
   .circle {
     transform: translate(-30px, 40px);
