--- a/src/pages/ProjectPage/ProjectPage.module.css
+++ b/src/pages/ProjectPage/ProjectPage.module.css
@@ -32,6 +32,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-decoration: none;
+  color: black;
 }
 
 .on .itemTop {
